fix li coloring on mobile

--- a/src/scss/_osu_group_menus.scss
+++ b/src/scss/_osu_group_menus.scss
@@ -78,6 +78,11 @@
   }
 
   .group-mobile-menu {
+    // override nav-link class
+    a.nav-link:hover {
+      background-color: $bucktoothwhite;
+      color: $paddletailblack;
+    }
 
     li a.group-mobile-main-a {
       font-weight: 600;
@@ -117,6 +122,7 @@
 
       > a {
         background-color: $bucktoothwhite !important;
+        color: $paddletailblack !important;
       }
     }
 
